tests/core/exparseBlocks.test
====================================================================================================
# Block

The where directive contains a set of assignments that apply to the expression above.
====================================================================================================
----------------------------------------------------------------------------------------------------

{ a }

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Id name="a"/>

----------------------------------------------------------------------------------------------------

do { a }

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Block imperative="true">
    <Id name="a"/>
</Block>

----------------------------------------------------------------------------------------------------

{ a } where a = 1

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Block>
    <Id name="a"/>
    <where>
        <AssignmentExpression op="=">
            <Id name="a"/>
            <Integer value="1"/>
        </AssignmentExpression>
    </where>
</Block>

----------------------------------------------------------------------------------------------------

{ a } where { a = 1 }

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Block>
    <Id name="a"/>
    <where>
        <AssignmentExpression op="=">
            <Id name="a"/>
            <Integer value="1"/>
        </AssignmentExpression>
    </where>
</Block>

----------------------------------------------------------------------------------------------------

x = {
    a
    b
}

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<AssignmentExpression op="=">
    <Id name="x"/>
    <Block>
        <Id name="a"/>
        <Id name="b"/>
    </Block>
</AssignmentExpression>

----------------------------------------------------------------------------------------------------

x = { a } where { a = 1 }

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<AssignmentExpression op="=">
    <Id name="x"/>
    <Block>
        <Id name="a"/>
        <where>
            <AssignmentExpression op="=">
                <Id name="a"/>
                <Integer value="1"/>
            </AssignmentExpression>
        </where>
    </Block>
</AssignmentExpression>

----------------------------------------------------------------------------------------------------

x = { a } where a = 1

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<AssignmentExpression op="=">
    <Id name="x"/>
    <Block>
        <Id name="a"/>
        <where>
            <AssignmentExpression op="=">
                <Id name="a"/>
                <Integer value="1"/>
            </AssignmentExpression>
        </where>
    </Block>
</AssignmentExpression>

----------------------------------------------------------------------------------------------------

x = do { a }

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Exception: Syntax error
<no file>, line 1
    do { x = do { a }}
           ^

----------------------------------------------------------------------------------------------------

a where {
    a = 1
}

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Block>
    <Id name="a"/>
    <where>
        <AssignmentExpression op="=">
            <Id name="a"/>
            <Integer value="1"/>
        </AssignmentExpression>
    </where>
</Block>

----------------------------------------------------------------------------------------------------

= a where {
    a = 1
}

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

<Return>
    <Block>
        <Id name="a"/>
        <where>
            <AssignmentExpression op="=">
                <Id name="a"/>
                <Integer value="1"/>
            </AssignmentExpression>
        </where>
    </Block>
</Return>

----------------------------------------------------------------------------------------------------
